devops-crash-course/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: three-tier-demo
  labels:
    app.kubernetes.io/name: three-tier-demo
